theia_deploy.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: checchia
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: checchia-theia-ingress
  namespace: checchia
spec:
  ingressClassName: nginx
  rules:
  - host: checchiatheia.fevereiro.jac.bsb.br
    http:
      paths:
      - backend:
          service:
            name: checchia-theia-service
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata: 
  name: checchia-theia-service
  namespace: checchia
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: checchia-theia
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checchia-theia-deploy
  namespace: checchia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: checchia-theia
  template:
    metadata:
      labels:
        app: checchia-theia
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      volumes:
        - name: checchia-volume
          persistentVolumeClaim:
            claimName: checchia-volume
      containers:
      - image: rishikoy/theiaide-full:1.0.0-SNAPSHOT
        name: checchia-theia
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /home/project
          name: checchia-volume
